# mlops_pipeline_y

./: LICENSE  README.md  main.py  pyproject.toml
experiments/: mynotebook.ipynb
