[project]
name = "mlops-pipeline-y"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "wordcloud>=1.9.4",
    "xgboost<2.0",
]
